# stochastic-processes

./: Cargo.toml  README.md
examples/: main.rs  py.rs
src/: cir.rs  gbm.rs  lib.rs  ornsteinuhlenbeck.rs
src/export/: mod.rs
src/export/json/: mod.rs
src/export/py/: mod.rs
src/processes/: cir.rs  gbm.rs  mod.rs  ornstein_uhlenbeck.rs  wiener.rs
