[package]
name = "stochastic-processes"
author = "Meet Patel"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "^0.31"
rand = "0.8.5"
statrs = "0.15.0"

[build]
rustdocflags = ["--html-in-header", "katex-header.html"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
