[package]
name = "stochastic-processes"
description = "Stochastic processes simulation toolkit."
author = "Meet Patel"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MeetThePatel/stochastic-processes"
homepage = "https://github.com/MeetThePatel/stochastic-processes"
documentation = "https://docs.rs/stochastic_processes"
readme = "README.md"
license = "MIT"
keywords = ["math", "stochastic", "simluation"]
categories = ["mathematics"]

[dependencies]
nalgebra = "^0.31"
rand = "0.8.5"
statrs = "0.15.0"

[build]
rustdocflags = ["--html-in-header", "katex-header.html"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
