[package]
name = "stochastic-processes"
description = "Stochastic processes simulation toolkit."
author = "Meet Patel"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/MeetThePatel/stochastic-processes"
homepage = "https://github.com/MeetThePatel/stochastic-processes"
documentation = "https://docs.rs/stochastic_processes"
readme = "README.md"
license = "MIT"
keywords = ["math", "stochastic", "simulation"]
categories = ["mathematics"]

[dependencies]
nalgebra = { version = "^0.31", features = ["serde-serialize"] }
rand = "0.8.5"
statrs = "0.15.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde-pickle = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }

[features]
py = ["dep:serde", "dep:serde-pickle"]
json = ["dep:serde", "dep:serde_json"]

[build]
rustdocflags = ["--html-in-header", "katex-header.html"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
